First commited as before_46455_rev12